{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 16,
  "lineage": "26ffb38e-4ab4-b06b-ea4b-59d1049091c0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/networkInterfaces/b1e3-gr2-nic",
            "internal_domain_name_suffix": "se3321phpghu3mpy434naruzdb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "b1e3-gr2-nic-private_ip",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/sr1"
              }
            ],
            "location": "westeurope",
            "name": "b1e3-gr2-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "b1e3-gr2"
          },
          "dependencies": [
            "azurerm_subnet.Subnet",
            "azurerm_virtual_network.VNet",
            "data.azurerm_resource_group.current",
            "time_static.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG_Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/networkSecurityGroups/b1e3-gr2-nsg-bastion",
            "location": "westeurope",
            "name": "b1e3-gr2-nsg-bastion",
            "resource_group_name": "b1e3-gr2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_Rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "82.126.234.200",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_Bastion_Rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "10022",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/networkSecurityGroups/b1e3-gr2-nsg-bastion/securityRules/SSH_Rule",
            "name": "SSH_Rule",
            "network_security_group_name": "b1e3-gr2-nsg-bastion",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "b1e3-gr2",
            "source_address_prefix": "82.126.234.200",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG_Bastion",
            "data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Public_IP_Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "b1e3-gr2-bastion",
            "fqdn": "b1e3-gr2-bastion.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/publicIPAddresses/b1e3-gr2-public_ip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.97.217.90",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "b1e3-gr2-public_ip-bastion",
            "resource_group_name": "b1e3-gr2",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "DeployID": "2023-07-03",
              "Development": "b1e3-gr2",
              "Environment": "Preproduction",
              "Owner": "azureuser"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.current",
            "time_static.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "gateway",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/gateway",
            "name": "gateway",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "b1e3-gr2",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_virtual_network.VNet",
            "data.azurerm_resource_group.current",
            "time_static.main"
          ]
        },
        {
          "index_key": "sr1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/sr1",
            "name": "sr1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "b1e3-gr2",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_virtual_network.VNet",
            "data.azurerm_resource_group.current",
            "time_static.main"
          ]
        },
        {
          "index_key": "sr2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/sr2",
            "name": "sr2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "b1e3-gr2",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_virtual_network.VNet",
            "data.azurerm_resource_group.current",
            "time_static.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6dde3b91-79e7-4e8f-b1f8-f77cd0469919",
            "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn",
            "location": "westeurope",
            "name": "vn",
            "resource_group_name": "b1e3-gr2",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/sr1",
                "name": "sr1"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/sr2",
                "name": "sr2"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/c56aea2c-50de-4adc-9673-6a8008892c21/resourceGroups/b1e3-gr2/providers/Microsoft.Network/virtualNetworks/vn/subnets/gateway",
                "name": "gateway"
              }
            ],
            "tags": {
              "DeployID": "2023-07-03",
              "Development": "b1e3-gr2",
              "Environment": "Preproduction",
              "Owner": "azureuser"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.current",
            "time_static.main"
          ]
        }
      ]
    }
  ]
}